[gd_scene load_steps=3 format=3 uid="uid://ddqsnul7lwv6d"]

[ext_resource type="Script" uid="uid://b2dqx8cq8dgaw" path="res://Scripts/hand_script.gd" id="2_e75s6"]
[ext_resource type="PackedScene" uid="uid://0mhn4t6joknt" path="res://Assets/Models/HandModel_0.glb" id="2_ofmjh"]

[node name="hand" type="Node3D" groups=["hand"]]
script = ExtResource("2_e75s6")

[node name="hand_pos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965925, 0, -0.965925, 0.258819, 0, -0.023571089, 0.05)

[node name="object_pos" type="Marker3D" parent="hand_pos"]
transform = Transform3D(1, 0, 0, 0, 2.3841858e-07, -1.000001, 0, 1.000001, 2.3841858e-07, 0, 0.028515149, -0.33676547)

[node name="HandModel_0" parent="hand_pos" instance=ExtResource("2_ofmjh")]
transform = Transform3D(1, 0, 0, 0, 1, -5.9604645e-08, 0, 5.9604645e-08, 1, 0, 0.09659265, -0.025881946)

[node name="hold_timer" type="Timer" parent="."]
one_shot = true

[node name="await_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
